--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,56 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+# Node.js
+node_modules/
+npm-debug.log
+yarn-error.log
 
-node_modules
-dist
-dist-ssr
-*.local
+# Build artifacts
+dist/
+build/
+coverage/
+.next/
+out/
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Docker
+.dockerignore
+docker-compose.override.yml
+docker-compose*.yml
+
+# GitHub Actions
+.github/workflows/*.yml
+
+# OS generated files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+# IDEs
+.idea/
+.vscode/
+*.swp
+
+# Test and temporary files
+test-results/
+*.log
+*.tmp
+
+# Cache
+.cache/
+.npm/
+.eslintcache
+
+# Runtime data
+*.sqlite
+
+# Logs
+logs/
+*.log
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Miscellaneous
+package-lock.json
+yarn.lock
